<resources>
    <string name="app_name">Trackoe Déchèterie</string>
    <string name="action_settings">Settings</string>
    <string name="settings_date_format">cccc dd MMMM yyyy à HH:mm</string>
    <string name="intervention_date_format_out">cccc dd MMMM yyyy</string>
    <string name="intervention_date_format_in">yyyy-MM-dd</string>
    <string name="email_date_format">dd/MM/yyyy</string>
    <string name="depot_date_format_in">yyyyMMdd</string>
    <string name="db_date_format">yyyyMMddHHmmss</string>
    <string name="releve_date_format_out">cccc dd MMMM yyyy - HH:mm</string>
    <string name="signature_date_format">dd/MM/yyyy</string>
    <string name="normal_date_format">yyyyMMdd</string>
    <string name="depot_id_date_format">yyMMddHHmmss</string>
    <string name="ws_date_format">yyyy-MM-dd-HH-mm-ss</string>
    <string name="intervention_reparation">Réparation de BAC</string>
    <string name="intervention_reparation_pav">Réparation de Colonne</string>
    <string name="intervention_reparation_title">BAC à Réparer</string>
    <string name="intervention_reparation_pav_title">Colonne à Réparer</string>
    <string name="intervention_changement">Changement de BAC</string>
    <string name="intervention_changement_pav">Changement de Colonne</string>
    <string name="intervention_distribution">Distribution de BAC</string>
    <string name="intervention_distribution_pav">Pose de Colonne</string>
    <string name="intervention_distribution_title">BAC à Distribuer</string>
    <string name="intervention_distribution_pav_title">Colonne à Distribuer</string>
    <string name="intervention_enlevement">Enlèvement de BAC</string>
    <string name="intervention_enlevement_title">BAC à Retirer</string>
    <string name="intervention_enlevement_pav">Enlèvement de Colonne</string>
    <string name="intervention_enlevement_pav_title">Colonne à Retirer</string>
    <string name="intervention_maintenance_pav">Maintenance de Colonne</string>
    <string name="intervention_maintenance_pav_title">Colonne à Maintenir</string>
    <string name="intervention_lavage_pav">Lavage de Colonne</string>
    <string name="intervention_lavage_pav_title">Colonne à Laver</string>
    <string name="dialog_recapitulatif_title">Récapitulatif</string>
    <string name="dialog_changement_title">Changement de Bac</string>
    <string name="dialog_changement_text">Êtes vous sûr de vouloir changer ce bac ?</string>
    <string name="dialog_maj_title">Installation</string>
    <string name="dialog_maj_dispo_title">Mise à jour de l\'application</string>
    <string name="dialog_maj_dispo_mess">Une nouvelle version de l\'application a été téléchargée.\nVoulez vous l\'installer maintenant ?</string>
    <string name="dialog_maj_dispo_desc">\n\n Nouvelles fonctionnalités : \n %1$s</string>
    <string name="dialog_maj_dispo_ko">Pas maintenant</string>
    <string name="dialog_maj_dispo_ok">Installer</string>
    <string name="dialog_maj_mess">Il reste des relevés non synchronisé avec le serveur sur votre tablette.\n Veuillez effectuer cette synchronisation via l\'écran des paramètres avant de pouvoir mettre à jour l\'application</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_tablette_fragment">Trackoe: Contrôle d\'accès en déchèterie</string>
    <string name="title_login_fragment">Trackoe: Contrôle d\'accès en déchèterie</string>
    <string name="title_accueil_fragment">Trackoe: Contrôle d\'accès en déchèterie</string>
    <string name="title_setting_fragment">Paramètre</string>
    <string name="title_identification_fragment">Identification</string>
    <string name="title_depot_fragment">Dépôt de déchèts</string>
    <string name="title_apport_pro_fragment">Validation de Dépôt</string>
    <string name="title_recherche_usager_fragment">Rechercher d\'un usager</string>
    <string name="title_depot_liste_fragment">Liste de Dépôts</string>
    <string name="title_decheterie_fragment">Déchèteries</string>
    <string name="title_loading_fragment">Chargements des données</string>
    <string name="nfc_availability1">NFC available on this device</string>
    <string name="nfc_availability2">NFC available on this device</string>
    <string name="nfc_warning">NFC available on this device</string>
    <string name="pop_up_quit_depot_message">Vous allez annuler le dépot en cours, confirmez l\'annulation.</string>
    <string name="pop_up_quit_depot_title">Information</string>
    <string name="pop_up_quit_depot_positive_button">Oui</string>
    <string name="pop_up_quit_depot_negative_button">Non</string>
    <string name="pop_up_quit_accueil_message">Voulez-vous vous déconnecter?</string>
    <string name="pop_up_quit_accueil_title">Information</string>
    <string name="pop_up_quit_accueil_positive_button">Oui</string>
    <string name="pop_up_quit_accueil_negative_button">Non</string>
    <string name="text_no_decheterie_selected">Aucune déchèterie sélectionnée</string>
    <string name="pop_up_depot_incompleted_message">\nVous avez un dépot qui n\'est pas encore terminé.\nEst-ce que vous voulez continuer à éditer ce dépot?</string>
    <string name="pop_up_depot_incompleted_title">Information</string>
    <string name="pop_up_depot_incompleted_positive_button">Oui</string>
    <string name="pop_up_depot_incompleted_negative_button">Non</string>
    <string name="ancienne_carte_fragment_line1_title_textView_text">N° de carte:&#160;</string>
    <string name="ancienne_carte_fragment_line2_title_textView_text">Usager:&#160;</string>
    <string name="ancienne_carte_fragment_line3_title_textView_text">Ancienne carte:&#160;</string>
    <string name="ancienne_carte_fragment_line4_title_textView_text">Aucune carte active&#160;</string>
    <string name="ancienne_carte_fragment_line4_value_textView_text">pour cet usager</string>
    <string name="ancienne_carte_fragment_changement_button_text">Changement de carte</string>
    <string name="ancienne_carte_fragment_retour_scanner_button_text">Retour et scanner une nouvelle carte</string>
    <string name="apport_pro_fragment_top_up_line1_title_textView_text">Raison sociale:</string>
    <string name="apport_pro_fragment_top_up_line1_value_textView_text">NOM RAISON SOCIALE</string>
    <string name="apport_pro_fragment_top_up_line2_title_textView_text">Adresse:</string>
    <string name="apport_pro_fragment_top_up_line2_value_textView_text">ADRESSE</string>
    <string name="apport_pro_fragment_top_up_line3_title_textView_text">N° de carte:</string>
    <string name="apport_pro_fragment_top_up_line3_value_textView_text">NUMERO DE CARTE</string>
    <string name="apport_pro_fragment_left_up_line1_title_textView_text">Volume prépayés avant décompte:</string>
    <string name="apport_pro_fragment_left_up_line1_value_textView_text">X.XX m3</string>
    <string name="apport_pro_fragment_left_up_line2_title_textView_text">Volume apporté et décompté:</string>
    <string name="apport_pro_fragment_left_up_line2_value_textView_text">X.XX m3</string>
    <string name="apport_pro_fragment_bottom_left_up_line3_title_textView_text">Compte prépayés après décomptes:</string>
    <string name="apport_pro_fragment_bottom_left_up_line3_value_textView_text">X.XX m3</string>
    <string name="apport_pro_fragment_left_up_information_textView_text">Par ma signature je reconnais avoir pris connaissance et confirmé le décompte des apports.</string>
    <string name="apport_pro_fragment_valider_button_text">valider</string>
    <string name="apport_pro_fragment_signature_information_textView_text">Fait à la déchèterie de XXX, le JJ/MM/AAAA \nSignature</string>
    <string name="apport_pro_fragment_top_up_line1_title_textView_text1">NOM</string>
    <string name="apport_pro_fragment_top_up_line1_title_textView_text2">Raison Social:</string>
    <string name="decheterie_fragment_filtre_textView_text">Filtre :</string>
    <string name="decheteries_fragment_listView_item_dechetrie_name_textView_text">Name</string>
    <string name="depot_fragment_volume_total_textView_text">Volume total : </string>
    <string name="depot_fragment_valider_button_text">valider</string>
    <string name="depot_fragment_flux_item_textView_text">fluxNom</string>
    <string name="depot_fragment_init_volume_total_editText_text">0.00</string>
    <string name="depot_fragment_signature_information_text_1">Fait à la déchèterie de&#160;</string>
    <string name="depot_fragment_signature_information_text_2">, le &#160;</string>
    <string name="depot_fragment_signature_information_text_3">\nSignature</string>
    <string name="pop_up_message1">Vous avez sélectionné flux&#160;</string>
    <string name="flux_positive_button">valider</string>
    <string name="pop_up_return_to_accueil_message">Message Retour</string>
    <string name="pop_up_return_to_accueil_title">Information</string>
    <string name="pop_up_return_to_accueil_negative_button">Retour</string>
    <string name="depot_liste_fragment_pop_up_non_internet_title">Information</string>
    <string name="depot_liste_fragment_pop_up_non_internet_message">Veuillez vous connecter à l\' internet puis synchroniser les dépôts.</string>
    <string name="depot_liste_fragment_pop_up_non_internet_negative_button">Fermer</string>
    <string name="depot_liste_fragment_pop_up_non_synchro_title">Information</string>
    <string name="depot_liste_fragment_pop_up_non_synchro_message">Vous n\' avez aucun dépôt qui n\' est pas synchronisé.</string>
    <string name="depot_liste_fragment_pop_up_non_synchro_negative_button">Fermer</string>
    <string name="form_toast_envoi_depot">Dépôt envoyé.</string>
    <string name="depot_liste_content_btn_afficher_depot_non_synchro_text">Non synchro</string>
    <string name="depot_liste_content_btn_synchro_text">Synchronisation</string>
    <string name="dialog_flux_layout_title_text">Information</string>
    <string name="dialog_normal_layout_positive_button_text">Oui</string>
    <string name="dialog_normal_layout_negative_button_text">Non</string>
    <string name="dialog_normal_layout_title_textView_text">Information</string>
    <string name="dialog_flux_layout_message_text">Vous avez sélectionné flux carton_plus_papier</string>
    <string name="dialog_flux_layout_quantite_apporte_textView_text">Quantité apportée:   </string>
    <string name="dialog_flux_layout_unite_line1_textView_text">unite</string>
    <string name="dialog_flux_layout_quantite_decompte_textView_text">Quantité décomptée:   </string>
    <string name="dialog_flux_layout_unite_line2_textView_text">unite</string>
    <string name="dialog_flux_layout_quantite_apporte_decompte_textView_text">Quantité apportée/décomptée:</string>
    <string name="dialog_flux_layout_line3_textView_text">La quantité décomptée est</string>
    <string name="dialog_flux_layout_qty_calcul_textView_text">0.00</string>
    <string name="dialog_flux_layout_unite_line3_textView_text">   unite</string>
    <string name="dialog_flux_layout_point_line3_textView_text">.</string>
    <string name="dialog_flux_layout_positive_button_text">ok</string>
    <string name="dialog_onbackpressed_layout_title_textView_text">Information</string>
    <string name="dialog_onbackpressed_layout_positive_button_text">Oui</string>
    <string name="dialog_onbackpressed_layout_negative_button_text">Non</string>
    <string name="identification_fragment_line1_title_textView_text">Veuillez scanner le barcode</string>
    <string name="identification_fragment_suivant_button_text">Suivant</string>
    <string name="tablette_device_desc">Veuillez entrer le numéro du device</string>
    <string name="tablette_hint">Numéro</string>
    <string name="tablette_btn">OK</string>
    <string name="login_identifiant">Identifiant</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_btn">Valider</string>
    <string name="settings_env_prod">Prod :</string>
</resources>